Manifests-Openshift/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-apihandson
  labels:
    app.project.name: apihandson
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apihandson
  template:
    metadata:
      labels:
        app: apihandson 
    spec:
      containers:
        - name: apihandson 
          image: cesaragsilva/api-pratica-modelo:v4
          ports:
            - containerPort: 5000
