Manifests-Openshift/service.yml
apiVersion: v1
kind: Service
metadata:
    name: service-apihandson
    labels:
      app.project.name: apihandson
spec:
    type: ClusterIP
    ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
    selector:
        app: apihandson
