Manifests-Openshift/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-apihandson
  labels:
    app.interface: toshost
    app.project.name: apihandson
spec:
  tls:
    - hosts:
        - event-holdcontainer.btp.com.br
      secretName: certificado-tls
  rules:
    - host: event-holdcontainer.btp.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-apihandson
                port:
                  number: 8080
status:
  loadBalancer: {}
